--- a/ThesisMaster.tex
+++ b/ThesisMaster.tex
@@ -193,6 +193,7 @@
 
 %%epistemic 
 %
+\newcommand{\DASL}{$\mathcal{DASL}$}
 \newcommand{\Rel}[1]{R_{#1}}
 \newcommand{\Act}[1]{[ \mathit{#1} ]}
 \newcommand{\ActPos}[1]{\langle \mathit{XSTIT_{#1}} \rangle}
