--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -64,8 +64,17 @@
 	 	\bibitem{Prior}
 	 	Prior, A. Time and Modality. Clarendon Press: Oxford, UK, 1957.
 	 	
+	 	\bibitem{Kohler}
+	 	Kohler, R. Lords of the Fly. The University of Chicago Press: Chicago, USA, 1994.
+	 	
 	 	\bibitem{Kripke}
 	 	Kripke, S. Semantical Considerations on Modal Logic. {\em Acta Philosophica Fennica} {\bf 1963}, {\em 16}: 83-94.
+	 	
+	 	\bibitem{HarelKozenTiuryn}
+	 	Harel, D.; Kozen, D; Tiuryn, J. Dynamic Logic. MIT Press: Cambridge, MA, USA, 2000.
+	 	
+	 	\bibitem{Hsu}
+	 	Hsu, F. Behind Deep Blue: Building the Computer that Defeated the World Chess Champion. Princeton University Press: Princeton, NJ, USA, 2004.
 	 	
 	 	\bibitem{Lenzen}
 	 	Lenzen, W. Recent work in epistemic logic. {\em Acta Philosophica Fennica} {\bf 1972}, {\em 30(1)}: 1-219.
@@ -75,6 +84,9 @@
 	 	
 	 	\bibitem{negri}
 	 	Negri, S. Kripke completeness revisited. {\em Acts of Knowledge: History, Philosophy and Logic: Essays Dedicated to G{\"o}ran Sundholm} {\bf 2009}, 247-282.
+	 	
+	 	\bibitem{Pnueli}
+	 	Pnueli, A.  The Temporal Logic of Programs. {\em Proceedings of the 18th Annual Symposium on Foundations of Computer Science (SFCS 77)}. IEEE Computer Society.
 	 	
 	 	\bibitem{Rushby_Mode_Confusion}
 	 	Rushby, J. Using model checking to help discover mode confusions and other automation surprises. {\em Reliability Engineering and System Safety} {\bf 2002}, {\em 75}, 167-177.
