--- a/ThesisMaster.tex
+++ b/ThesisMaster.tex
@@ -194,6 +194,7 @@
 %%epistemic 
 %
 \newcommand{\DASL}{$\mathcal{DASL}$}
+\newcommand{\SFive}{$\mathcal{S}$\textit{5}}
 \newcommand{\Rel}[1]{R_{#1}}
 \newcommand{\Act}[1]{[ \mathit{#1} ]}
 \newcommand{\ActPos}[1]{\langle \mathit{XSTIT_{#1}} \rangle}
